Add paragraphs for introduction, cats, Alishan, and random quotes. Add links for github and add two pictures. Change greetings function to quotes function.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,17 +2,55 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Eva's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+        <h1>Eva's Portfolio</h1>
+        <!-- Introduction --> 
+        <h3>----About Myself 🇹🇼🇨🇦----</h3>
+        <p>My name is Eva Lee, and I am currently a second-year university 
+            student studying at Queen's University Canada. I am majoring 
+            in computer science specializing in Artificial 
+            Intelligence. </p>
+        <p>GitHub profiles:<a href="https://github.com/evalee20000831"> 
+        evalee20000831 </a></p>
+
+        <h3>---More About Myself 😎</h3>
+        <!-- Cats -->
+        <h4>Cat Lover 🐱</h4>
+        <p>I really love cat but I don't have a cat myself so I always pet 
+            other people's cats! </p>
+        <img src="eva-images/IMAG5989.jpg" alt="cat" 
+        width="302.4" height="403.2">
+        <p>Click <a href="catImages.html">here</a> to see more pictures of
+         cats!</p>
+
+        <!-- Alishan -->
+        <h4>Recent events - Alishan 🌿</h4> 
+        <p>I just went to Alishan (阿里山) first time in life. Now I can 
+            finally say I am Taiwanese!</p>
+        <img src="eva-images/IMAG6434.jpg" alt = "Alishan"
+        width="302.4" height="403.2">
+        <p>Click <a href="alishanImages.html">here</a> to see more pictures of
+         Alishan landscapes!</p>
+
+        <!-- Random Quotes --> 
+        <h4>Quotes✨</h4>
+        <p>Anime <i>Space Brothers</i> is one of my favorite anime. I watched
+        the series on TV when I was in middle school. I educated me to be a 
+        better person and motivated me to be a software engineer. It was 
+        because of this anime, I found what I wanted to do for future (at 
+        least for now)</p>
+        <p> If you want to know more about <i>Space Brothers</i>, please click 
+        <a href="https://en.wikipedia.org/wiki/Space_Brothers_(manga)"> 
+        here </a></p>
+        <p>Click here to get a random quote from my favorite anime
+            <i>Space Brothers</i>:</p>
+        <button onclick="addRandomQuote()">Quote</button>
+        <div id="quote-container"></div>
     </div>
   </body>
 </html>
