--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -5,8 +5,10 @@
     <title>Eva's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    
   </head>
   <body>
+    <button class="button">Green</button>
     <div id="content">
         <h1>Eva's Portfolio</h1>
         <!-- Introduction --> 
@@ -17,6 +19,7 @@
             Intelligence. </p>
         <p>GitHub profiles:<a href="https://github.com/evalee20000831"> 
         evalee20000831 </a></p>
+        
 
         <h3>---More About Myself 😎</h3>
         <!-- Cats -->
