--- a/portfolio/src/main/webapp/alishanImages.html
+++ b/portfolio/src/main/webapp/alishanImages.html
@@ -2,14 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Alishan Image Gallery</title>
+    <title>Recent events - Alishan</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="content">
-      <h1>Alishan Image Gallery</h1>
-      <div class="image-thumbnails">
+        <h1>Recent events - Alishan 🌿</h1> 
+        <h3>I just went to Alishan (阿里山) first time in life. Now I can 
+            finally say I am Taiwanese!</h3>
+
         <h3>Alishan Mianyue Line / 阿里山珉月線鐵路</h3> 
+        <a href="eva-images/IMAG6434.jpg"><img src="eva-images/IMAG6434.jpg" 
+        alt="Alishan-Landscape" width="302.4" height="403.2"/></a> 
         <a href="eva-images/alishanLand-1.jpg"><img src="eva-images/alishanLand-1.jpg" 
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a>
         <a href="eva-images/alishanLand-2.jpg"><img src="eva-images/alishanLand-2.jpg" 
@@ -22,7 +26,6 @@
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a>
         <a href="eva-images/alishanLand-6.jpg"><img src="eva-images/alishanLand-6.jpg" 
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a>
-      </div>
     </div>
   </body>
 </html>
