--- a/portfolio/src/main/webapp/catImages.html
+++ b/portfolio/src/main/webapp/catImages.html
@@ -2,13 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Cat Image Gallery</title>
+    <title>Cat Lover</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="content">
-      <h1>Cat Image Gallery</h1>
-      <div class="image-thumbnails">
+      <!-- Cats -->
+        <h1>Cat Lover🐱</h1>
+        <h3>I really love cat but I don't have a cat myself so I always pet 
+            other people's cats! Below is those lovely cats that I met in 
+            different places in Taiwan.</h3>
         <h3>Cat from Tainan</h3> 
         <a href="eva-images/IMAG5989.jpg"><img src="eva-images/IMAG5989.jpg" 
         alt="Tainan-cat" width="302.4" height="403.2"/></a>
@@ -25,7 +28,6 @@
         <a href="eva-images/alishan-2.jpg"><img src="eva-images/alishan-2.jpg" 
         alt="Alishan-cat" width="302.4" height="403.2"/></a>
         
-      </div>
     </div>
   </body>
 </html>
