--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,37 +8,26 @@
     
   </head>
   <body>
-    <button class="button">Green</button>
+    <!-- Intro image --> 
+    <div class="hero-image">
+        <div class="hero-text">
+            <h1 style="font-size:70px">Eva's Portfolio</h1>
+        </div>
+    </div>
+
     <div id="content">
-        <h1>Eva's Portfolio</h1>
+        <h1>Eva's Portfolio🇹🇼🇨🇦</h1>
         <!-- Introduction --> 
-        <h3>----About Myself 🇹🇼🇨🇦----</h3>
         <p>My name is Eva Lee, and I am currently a second-year university 
             student studying at Queen's University Canada. I am majoring 
             in computer science specializing in Artificial 
             Intelligence. </p>
-        <p>GitHub profiles:<a href="https://github.com/evalee20000831"> 
-        evalee20000831 </a></p>
-        
-
-        <h3>---More About Myself 😎</h3>
-        <!-- Cats -->
-        <h4>Cat Lover 🐱</h4>
-        <p>I really love cat but I don't have a cat myself so I always pet 
-            other people's cats! </p>
-        <img src="eva-images/IMAG5989.jpg" alt="cat" 
-        width="302.4" height="403.2">
-        <p>Click <a href="catImages.html">here</a> to see more pictures of
-         cats!</p>
-
-        <!-- Alishan -->
-        <h4>Recent events - Alishan 🌿</h4> 
-        <p>I just went to Alishan (阿里山) first time in life. Now I can 
-            finally say I am Taiwanese!</p>
-        <img src="eva-images/IMAG6434.jpg" alt = "Alishan"
-        width="302.4" height="403.2">
-        <p>Click <a href="alishanImages.html">here</a> to see more pictures of
-         Alishan landscapes!</p>
+        <h3>Profiles</h3>
+        <a href="https://github.com/evalee20000831" class="button button1">GitHub</a>
+        <a href="https://www.facebook.com/evalee.eva.1/" class="button button2">Facebook</a>
+        <h3>More About Eva</h3>
+        <a href="catImages.html" class="button button3">Cat Lover</a>
+        <a href="alishanImages.html" class="button button3">Recent Event</a>
 
         <!-- Random Quotes --> 
         <h4>Quotes✨</h4>
