Finish up the portfolio.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -24,7 +24,7 @@
             <div id="content">
             <h1 style="text-align:center;">Eva's Portfolio🇹🇼🇨🇦</h1>
                 <!-- Introduction --> 
-                <p class="a">My name is Eva Lee. I am second-year student 
+                <p class="a">My name is Eva Lee. I am a second-year student 
                     currently studying at Queen's University, Canada. My major is computer 
                     science with a specialization at Artificial Intelligence Stream. </p>
 
@@ -43,6 +43,7 @@
             <h3>Profiles</h3>
                 <a href="https://github.com/evalee20000831" class="button button1">GitHub</a>
                 <a href="https://www.facebook.com/evalee.eva.1/" class="button button2">Facebook</a>
+            <!-- Connect to other page -->
             <h3>My hashtags</h3>
                 <a href="education.html" class="button button3">#Education</a>
                 <a href="catImages.html" class="button button3">#Cat Lover</a>
