--- a/portfolio/src/main/webapp/alishanImages.html
+++ b/portfolio/src/main/webapp/alishanImages.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Can be reached from index.html -->
     <meta charset="UTF-8">
     <title>Recent events - Alishan</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="content">
+        <!-- Alishan Intro -->
         <h1>Recent events - Alishan 🌿</h1> 
         <h3>I just went to Alishan (阿里山) first time in life. Now I can 
             finally say I am Taiwanese!</h3>
 
+        <!-- Alishan pics -->
         <h3>Alishan Mianyue Line / 阿里山珉月線鐵路</h3> 
         <a href="eva-images/IMAG6434.jpg"><img src="eva-images/IMAG6434.jpg" 
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a> 
