--- a/portfolio/src/main/webapp/catImages.html
+++ b/portfolio/src/main/webapp/catImages.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Can be reached from index.html -->
     <meta charset="UTF-8">
     <title>Cat Lover</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="content">
-      <!-- Cats -->
+      <!-- Cats intro -->
         <h1>Cat Lover🐱</h1>
         <h3>I really love cat but I don't have a cat myself so I always pet 
             other people's cats! Below is those lovely cats that I met in 
             different places in Taiwan.</h3>
+        <!-- Cat pics -->
         <h3>Cat from Tainan</h3> 
         <a href="eva-images/IMAG5989.jpg"><img src="eva-images/IMAG5989.jpg" 
         alt="Tainan-cat" width="302.4" height="403.2"/></a>
