Check grammar in index.html.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -58,10 +58,9 @@
             <div id="content">
                 <h4>Quotes✨</h4>
                     <p>Anime <i>Space Brothers</i> is one of my favorite anime. I watched
-                        the series on TV when I was in middle school. I educated me to be a 
-                        better person and motivated me to be a software engineer. It was 
-                        because of this anime, I found what I wanted to do for future (at 
-                        least for now)</p>
+                        the series on TV when I was in middle school. It educated me to be a 
+                        better person and motivated me to be a software engineer. It's 
+                        because of this anime, I found what I wanted to do for the future. </p>
                     <p> If you want to know more about <i>Space Brothers</i>, please click 
                     <a href="https://en.wikipedia.org/wiki/Space_Brothers_(manga)">here</a></p>
                     <p>Click here to get a random quote from my favorite anime 
