Revise the code based on the PA's suggestion.

--- a/portfolio/src/main/webapp/alishanImages.html
+++ b/portfolio/src/main/webapp/alishanImages.html
@@ -7,27 +7,27 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="content">
-        <!-- Alishan Intro -->
-        <h1>Recent events - Alishan 🌿</h1> 
-        <h3>I just went to Alishan (阿里山) first time in life. Now I can 
-            finally say I am Taiwanese!</h3>
+    <div id="first-back">
+      <!-- Alishan Intro -->
+      <h1>Recent events - Alishan 🌿</h1> 
+      <h3>I just went to Alishan (阿里山) first time in life. Now I can 
+        finally say I am Taiwanese!</h3>
 
-        <!-- Alishan pics -->
-        <h3>Alishan Mianyue Line / 阿里山珉月線鐵路</h3> 
-        <a href="eva-images/IMAG6434.jpg"><img src="eva-images/IMAG6434.jpg" 
+      <!-- Alishan pics -->
+      <h3>Alishan Mianyue Line / 阿里山珉月線鐵路</h3> 
+      <a href="eva-images/IMAG6434.jpg"><img src="eva-images/IMAG6434.jpg" 
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a> 
-        <a href="eva-images/alishanLand-1.jpg"><img src="eva-images/alishanLand-1.jpg" 
+      <a href="eva-images/alishanLand-1.jpg"><img src="eva-images/alishanLand-1.jpg" 
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a>
-        <a href="eva-images/alishanLand-2.jpg"><img src="eva-images/alishanLand-2.jpg" 
+      <a href="eva-images/alishanLand-2.jpg"><img src="eva-images/alishanLand-2.jpg" 
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a>
-        <a href="eva-images/alishanLand-3.jpg"><img src="eva-images/alishanLand-3.jpg" 
+      <a href="eva-images/alishanLand-3.jpg"><img src="eva-images/alishanLand-3.jpg" 
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a>
-        <a href="eva-images/alishanLand-4.jpg"><img src="eva-images/alishanLand-4.jpg" 
+      <a href="eva-images/alishanLand-4.jpg"><img src="eva-images/alishanLand-4.jpg" 
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a>
-        <a href="eva-images/alishanLand-5.jpg"><img src="eva-images/alishanLand-5.jpg" 
+      <a href="eva-images/alishanLand-5.jpg"><img src="eva-images/alishanLand-5.jpg" 
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a>
-        <a href="eva-images/alishanLand-6.jpg"><img src="eva-images/alishanLand-6.jpg" 
+      <a href="eva-images/alishanLand-6.jpg"><img src="eva-images/alishanLand-6.jpg" 
         alt="Alishan-Landscape" width="302.4" height="403.2"/></a>
     </div>
   </body>
