--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,64 +11,64 @@
     <!-- Intro image --> 
     <div class="intro-image"></div>
     <div class="intro-text">
-        <h1 style="font-size:70px">Eva's Portfolio</h1>
+      <h1 style="font-size:70px">Eva's Portfolio</h1>
     </div>
 
     <div class="row">
-        <!-- My pic on the left side--> 
-        <div class="column">
-            <img src="eva-images/eva-image.jpg" alt="eva" style="width:100%">
-        </div>
-        <!-- My info on the right side--> 
-        <div class="column">
-            <div id="content">
-            <h1 style="text-align:center;">Eva's Portfolio🇹🇼🇨🇦</h1>
-                <!-- Introduction --> 
-                <p class="a">My name is Eva Lee. I am a second-year student 
-                    currently studying at Queen's University, Canada. My major is computer 
-                    science with a specialization at Artificial Intelligence Stream. </p>
+      <!-- My pic on the left side--> 
+      <div class="column">
+        <img src="eva-images/eva-image.jpg" alt="eva" style="width:100%">
+      </div>
+      <!-- My info on the right side--> 
+      <div class="column">
+        <div id="first-back">
+          <h1 style="text-align:center;">Eva's Portfolio🇹🇼🇨🇦</h1>
+          <!-- Introduction --> 
+          <p class="index">My name is Eva Lee. I am a second-year student 
+            currently studying at Queen's University, Canada. My major is computer 
+            science with a specialization at Artificial Intelligence Stream. </p>
 
-                <p class="a">I am a multicultural and multilingual person. 
-                    Before high school, I was studying in Taiwanese education system. Hence, I am 
-                    culturally Taiwanese and have no problem speak or write Mandarin. I can also 
-                    speak Taiwanese. Starting high school, I started my journey of studying abroad. 
-                    I was in International Baccalaureate Diploma Program (IBDP) for two years. 
-                    Meanwhile, I am very interested in Japanese culture. Therefore, I have 
-                    learned Japanese on my own. My Japanese language level is between N3~N2 in 
-                    JLPT system. </p>
+          <p class="index">I am a multicultural and multilingual person. 
+            Before high school, I was studying in Taiwanese education system. Hence, I am 
+            culturally Taiwanese and have no problem speak or write Mandarin. I can also 
+            speak Taiwanese. Starting high school, I started my journey of studying abroad. 
+            I was in International Baccalaureate Diploma Program (IBDP) for two years. 
+            Meanwhile, I am very interested in Japanese culture. Therefore, I have 
+            learned Japanese on my own. My Japanese language level is between N3~N2 in 
+            JLPT system. </p>
             
-            <h3>Contact Information</h3>
-            <p class="a">Email Address: <u>jlee@sps-program.com</u> or <u>18JHL@queensu.ca</u></p>
+          <h3>Contact Information</h3>
+          <p class="index">Email Address: <u>jlee@sps-program.com</u> or <u>18JHL@queensu.ca</u></p>
 
-            <h3>Profiles</h3>
-                <a href="https://github.com/evalee20000831" class="button button1">GitHub</a>
-                <a href="https://www.facebook.com/evalee.eva.1/" class="button button2">Facebook</a>
-            <!-- Connect to other page -->
-            <h3>My hashtags</h3>
-                <a href="education.html" class="button button3">#Education</a>
-                <a href="catImages.html" class="button button3">#Cat Lover</a>
-                <a href="alishanImages.html" class="button button3">#Recent Event</a>
-            </div>
+          <h3>Profiles</h3>
+            <a href="https://github.com/evalee20000831" class="button github-button">GitHub</a>
+            <a href="https://www.facebook.com/evalee.eva.1/" class="button fb-button">Facebook</a>
+          <!-- Connect to other page -->
+          <h3>My hashtags</h3>
+            <a href="education.html" class="button link-button">#Education</a>
+            <a href="catImages.html" class="button link-button">#Cat Lover</a>
+            <a href="alishanImages.html" class="button link-button">#Recent Event</a>
         </div>
+      </div>
     </div>   
 
     <div class="quote-image"></div>
-        <div class="quote-text">
-            <!-- Random Quotes --> 
-            <div id="content">
-                <h4>Quotes✨</h4>
-                    <p>Anime <i>Space Brothers</i> is one of my favorite anime. I watched
-                        the series on TV when I was in middle school. It educated me to be a 
-                        better person and motivated me to be a software engineer. It's 
-                        because of this anime, I found what I wanted to do for the future. </p>
-                    <p> If you want to know more about <i>Space Brothers</i>, please click 
-                    <a href="https://en.wikipedia.org/wiki/Space_Brothers_(manga)">here</a></p>
-                    <p>Click here to get a random quote from my favorite anime 
-                        <i>Space Brothers</i>:</p>
-                <button onclick="addRandomQuote()">Quote</button>
-                <div id="quote-container"></div>
-            </div>
+      <div class="quote-text">
+        <!-- Random Quotes --> 
+        <div id="first-back">
+          <h4>Quotes✨</h4>
+          <p>Anime <i>Space Brothers</i> is one of my favorite anime. I watched
+            the series on TV when I was in middle school. It educated me to be a 
+            better person and motivated me to be a software engineer. It's 
+            because of this anime, I found what I wanted to do for the future. </p>
+          <p> If you want to know more about <i>Space Brothers</i>, please click 
+          <a href="https://en.wikipedia.org/wiki/Space_Brothers_(manga)">here</a></p>
+          <p>Click here to get a random quote from my favorite anime 
+            <i>Space Brothers</i>:</p>
+          <button onclick="addRandomQuote()">Quote</button>
+          <div id="quotes-container"></div>
         </div>
+      </div>
     </div>
   </body>
 </html>
