Revise the PA's suggestion and update fetch message.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -67,6 +67,10 @@
             <i>Space Brothers</i>:</p>
           <button onclick="addRandomQuote()">Quote</button>
           <div id="quotes-container"></div>
+
+          <p>Fetch</p>
+          <button onclick="getMessageUsingArrowFunctions()">Fetch data</button>
+          <div id="message-container"></div>
         </div>
       </div>
     </div>
