Change the css and js file name in random-quote folder due to incorrect link.

--- a/walkthroughs/week-2-server/examples/random-quotes/src/main/webapp/index.html
+++ b/walkthroughs/week-2-server/examples/random-quotes/src/main/webapp/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Random Quotes</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="styleR.css">
+    <script src="scriptR.js"></script>
   </head>
   <body>
     <div id="content">
       <h1>Random Quotes</h1>
       <p>Click here to see a random quote:</p>
-      <button onclick="getRandomQuote()">Fetch a quote!</button>
+      <!--getRandomQuote() or getRandomQuoteUsingArrowFunctions() or getRandomQuoteUsingAsyncAwait()-->
+      <button onclick="getRandomQuoteUsingAsyncAwait()">Fetch a quote!</button>
       <div id="quote-container"></div>
     </div>
   </body>
