--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -67,12 +67,13 @@
             <i>Space Brothers</i>:</p>
           <button onclick="addRandomQuote()">Quote</button>
           <div id="quotes-container"></div>
-
+          <!-- Fetch --> 
           <p>Fetch</p>
+          <div id="comment-container"></div>
           <button onclick="getMessageUsingArrowFunctions()">Fetch data</button>
-          <div id="message-container"></div>
+          
         </div>
       </div>
     </div>
-  </body>
+  </body>    
 </html>
