Create markers for map feature

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -49,7 +49,7 @@
             <a href="education.html" class="button link-button">#Education</a>
             <a href="catImages.html" class="button link-button">#Cat Lover</a>
             <a href="alishanImages.html" class="button link-button">#Recent Event</a>
-            <a href="maps.html" class="button link-button">#Maps</a>
+            <a href="maps.html" class="button link-button">#Go-to Places in Taipei</a>
         </div>
       </div>
     </div>   
