--- a/portfolio/src/main/webapp/maps.html
+++ b/portfolio/src/main/webapp/maps.html
@@ -3,16 +3,16 @@
   <head>
     <!-- Can be reached from index.html -->
     <meta charset="UTF-8">
-    <title>Maps</title>
+    <title>Go-to Places</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgtI2nxHdfJhgpJiy8Z0oJh7ZUsfS_ufc"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body onload="createMap();">
     <div id="first-back">
-      <h1>Hello Google Maps</h1>
+      <h1>Here are some of my fav go-to places in Taipei!</h1>
       <div id="map"></div>
-      <p>This page shows a Google Map!</p>
+      <p>I would love to give you a tour when you come to Taipei!</p>
     </div>
   </body>
 </html>
